--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
     <meta property="og:image:width" content="246" />
     <meta property="og:image:height" content="48" />
     <meta property="og:site_name" content="Psiconsult" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="Psicoterapia · Psiconsult – Assessoria e Consultoria em Psicologia · Psicoterapia · Orientação Profissional. 10.336.459/0001-14." />
     <meta property="og:url" content="https://psiconsult.com.br/" />
     <meta property="og:type" content="website" />
     <link
